fix layout issues in mobile and tablets

--- a/css/components.css
+++ b/css/components.css
@@ -313,7 +313,7 @@ section > p {
   }
   
   .nav-buttons {
-    bottom: var(--space-sm);
+    bottom: var(--space-lg);
     right: var(--space-sm);
   }
 }
